<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_user"
            android:layout_width="100dp"
            android:layout_height="100dp"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/user_avatar" />

        <TextView
            android:id="@+id/usr_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:textSize="14sp"
            card_view:layout_constraintStart_toEndOf="@+id/img_user"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_username" />

        <TextView
            android:id="@+id/usr_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textSize="14sp"
            card_view:layout_constraintStart_toEndOf="@+id/img_user"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/usr_follower"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/tv_followers"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_name" />

        <TextView
            android:id="@+id/usr_repo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/tv_repositories"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_follower" />

        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_followers"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/img_user"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_name" />

        <TextView
            android:id="@+id/tv_repositories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_repositories"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/img_user"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_follower" />

        <TextView
            android:id="@+id/tv_following"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/txt_following"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/usr_follower"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_name" />

        <TextView
            android:id="@+id/usr_following"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            card_view:layout_constraintStart_toEndOf="@+id/tv_following"
            card_view:layout_constraintTop_toBottomOf="@+id/usr_name" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>