<?xml version="1.0" encoding="utf-8"?>

<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            tools:context=".DetailUserActivity">

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/img_dtl_avatar"
                    android:layout_width="150dp"
                    android:layout_height="150dp" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow">

                <TextView
                    android:id="@+id/text_dtl_name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow2">

                <TextView
                    android:id="@+id/text_dtl_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow3">

                <TextView
                    android:id="@+id/text_dtl_follower"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tvFollower" />

                <TextView
                    android:id="@+id/text_dtl_val_follower"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow4">

                <TextView
                    android:id="@+id/text_dtl_following"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tvFollowing" />

                <TextView
                    android:id="@+id/text_dtl_val_following"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow5">

                <TextView
                    android:id="@+id/text_dtl_repo"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tvRepositories" />

                <TextView
                    android:id="@+id/text_dtl_val_repo"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow6">

                <TextView
                    android:id="@+id/text_dtl_location"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tvLocation" />

                <TextView
                    android:id="@+id/text_dtl_val_location"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />
            </TableRow>

            <TableRow
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tableRow7">

                <TextView
                    android:id="@+id/text_dtl_company"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:text="@string/tvCompany" />

                <TextView
                    android:id="@+id/text_dtl_val_company"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end" />
            </TableRow>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</TableLayout>
